name:                language-jsdoc
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/language-jsdoc#readme
license:             MIT
license-file:        LICENSE
author:              Andrea Guarino
maintainer:          andrea.guarino.1989@gmail.com
copyright:           2016 Andrea Guarino
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.JSDoc.Parser
                       Language.JSDoc.Parser.Base 
                       Language.JSDoc.Parser.Parser
  build-depends:       base >= 4.7 && < 5
                     , parsec >=3.1 && <3.2
  default-language:    Haskell2010

test-suite language-jsdoc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , language-jsdoc
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/language-jsdoc
